labs/tricks/manifests/canary/dep-nginx-v19.6.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server-1.19
  labels:
    app.kubernetes.io/name: nginx
    app.kubernetes.io/version: 1.19.6
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx
      app.kubernetes.io/version: 1.19.6
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx
        app.kubernetes.io/version: 1.19.6
      name: test-nginx
      namespace: default
    spec:
      containers:
      - image: nginx:1.19.6-alpine
        name: test-nginx
        volumeMounts:
        - mountPath: /usr/share/nginx/html/test
          name: test-volume
        ports:
        - containerPort: 80
        imagePullPolicy: IfNotPresent
      volumes:
      - name: test-volume
        emptyDir: {}
