labs/tricks/manifests/canary/dep-nginx-v18.0.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  namespace: default
spec:
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          serviceName: web-server
          servicePort: 80
        path: /test
  tls:
  - hosts:
    - example.com
    secretName: example-com-tls-secret

---
apiVersion: v1
kind: Service
metadata:
  name: web-server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: nginx
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server-1.18
  labels:
    app.kubernetes.io/name: nginx
    app.kubernetes.io/version: 1.18.0
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx
      app.kubernetes.io/version: 1.18.0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx
        app.kubernetes.io/version: 1.18.0
      name: test-nginx
      namespace: default
    spec:
      containers:
      - image: nginx:1.18.0-alpine
        name: test-nginx
        volumeMounts:
        - mountPath: /usr/share/nginx/html/test
          name: test-volume
        ports:
        - containerPort: 80
        imagePullPolicy: IfNotPresent
      volumes:
      - name: test-volume
        emptyDir: {}
